# bf-line-analyzer

./: .gitignore  BFAnalyzer.cpp  BFAnalyzer.h  BFApp.cpp  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md
test/: ls1.wkt  ls2.wkt  map.wkt  out.wkt
